feat(profile): adiciona exibição de perfil do usuário
- Implementa hook useUserProfile para gerenciar dados do usuário
- Atualiza AppShell para mostrar nome e foto do Google
- Adiciona seção de perfil na página de settings
- Salva automaticamente dados do usuário ao fazer login
- Adiciona botão de logout na seção de perfil

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "test:imports": "node scripts/test-imports.js",
     "test:imports:build": "node scripts/test-imports.js --build",
-    "test": "npm run test:imports"
+    "test": "npm run test:imports",
+    "check:env": "node scripts/check-env.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
